--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<!--Web manifest  -->
 	<link rel="manifest" href="manifest.webmanifest">
 
-	<!-- Google Tag Manager -->
+	<!-- Google Tag Manager when javascript is disabled -->
     <script>
     	(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 		new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
