--- a/index.html
+++ b/index.html
@@ -1,21 +1,13 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-	
-	<!-- Google Tag Manager -->
-    <script>
-    	(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-		new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-		j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-		'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefor e(j,f);
-	     /* Replace the <Google tag manager container id> with the one on your account */
-	        })(window,document,'script','dataLayer','<Google tag manager container id>');
-	     /* })(window,document,'script','dataLayer','GTM-PJRNZW5'); */			     
-		
-	</script>
-
-	<!-- End Google Tag Manager -->
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-NCK4MRR');</script>
+<!-- End Google Tag Manager -->
 	<meta charset="utf-8">
 	<title>Netpap Hotspot page </title>
 	<meta name="theme-color" content="teal" />
@@ -45,11 +37,10 @@
    </script>
 </head>
 <body>
-	<!-- Google Tag Manager (noscript) -->
-    <noscript>
-	<iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PJRNZW5" height="0" width="0" style="display:none;visibility:hidden"></iframe>
-    </noscript>
-   <!-- End Google Tag Manager (noscript) -->
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NCK4MRR"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
 
 	<!-- nav Container  -->
